# EXPEDITE

./: .env.prod.example  .gitignore  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  EXPEDITE_Technical_Showcase.pptx  GALGO_FONT_INSTALL.md  Nomination_Form_XXXXX_Nasscom_Research_Symposium_JUL26.pptx  README.md  claude.md  docker-compose.yml  draft_output.txt  package-lock.json  ppt.js  start_dev.sh  template_text.txt  tour.py
.jules/: bolt.md
backend/: .env.example  Dockerfile  check_mission_logs.py  check_permissions.py  clear_data.py  create_token.py  debug_user.py  fetch_draft.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_email_verification.py  test_mlx.py  test_new_endpoints.py  verify_timeline_backend.py
backend/app/: db.py  models.py
backend/app/agents/: scout_agent.py
backend/app/api/: deps.py
backend/app/core/: agent.py  composio_config.py  config.py  healthcheck.py  llm.py  sender.py  socket.py
backend/app/integrations/: __init__.py  github.py  linkedin.py  reddit.py  slack.py  twitter.py
backend/app/routers/: agents.py  assets.py  automation.py  contacts.py  health.py  integrations.py  missions.py  reviews.py  reviews.py.backup  sales_agent.py  scraper.py  settings.py  timeline.py  users.py  voice.py  webhooks.py
backend/app/services/: direct_actions.py  email_finder.py  followup_scheduler.py  github_ingest.py  integrations.py  integrations_old.py  market_intelligence.py  neo4j.py  profile_context.py  rag.py  reply_classifier.py  sales_agent.py  smtp_verifier.py  template_loader.py  unipile.py  voice.py  web_scraper.py
(+129 files in other folders)
